--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-alembic==1.17.1
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
+bcrypt==5.0.0
 click==8.3.0
 ecdsa==0.19.1
 fastapi==0.121.1
 greenlet==3.2.4
 h11==0.16.0
 idna==3.11
-Mako==1.3.10
-MarkupSafe==3.0.3
 passlib==1.7.4
 pyasn1==0.6.1
 pydantic==2.12.4
